# vcs

./: CMakeLists.txt  README.md  build.sh  run-server.sh
.nvcs/: config
cli/: main.cpp
cli/commands/: add.cpp  branch.cpp  cat_object.cpp  checkout.cpp  clone.cpp  commit.cpp  config_cmd.cpp  diff.cpp  init.cpp  log.cpp  pull.cpp  push.cpp  remote.cpp  status.cpp  tag.cpp  version.cpp
gui/: client.cpp  main.cpp
include/nvcs/: server_utils.hpp  version_system.hpp
include/nvcs/core/: blob.hpp  commit.hpp  index.hpp  object.hpp  refs.hpp  repository.hpp  tree.hpp
include/nvcs/net/: protocol.hpp  transport.hpp
include/nvcs/util/: compress.hpp  fs.hpp  hash.hpp
repos/my-project/.nvcs/refs/heads/: main
rust/server_utils/: Cargo.toml
rust/server_utils/src/: lib.rs
rust/version_system/: Cargo.toml
rust/version_system/src/: lib.rs
server/: main.cpp  server.cpp  server.hpp  server_utils.cpp
src/: version_system.cpp
src/core/: blob.cpp  commit.cpp  index.cpp  object.cpp  refs.cpp  repository.cpp  tree.cpp
src/net/: protocol.cpp  transport.cpp
src/util/: compress.cpp  fs.cpp  hash.cpp
